--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/frontend/default.css
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/frontend/default.css
@@ -129,6 +129,43 @@ color:#edebda;
 box-shadow: rgba(0, 0, 0, .25) 0 1px 0px;
 }
 
+/*********************************************************************************/
+/* Custom Logout button                                                          */
+/*********************************************************************************/
+input#logout{
+border:2px groove #7c93ba;
+cursor:pointer; /*forces the cursor to change to a hand when the button is hovered*/
+padding: 5px 25px;
+/*give the background a gradient - see cssdemos.tupence.co.uk/gradients.htm for more info*/
+background-color:#CC0000; /*required for browsers that don't support gradients*/
+background: -webkit-gradient(linear, left top, left bottom, from(#CC0000), to(#CC0000));
+background: -webkit-linear-gradient(top, #CC0000, #CC0000);
+background: -moz-linear-gradient(top, #CC0000, #CC0000);
+background: -o-linear-gradient(top, #CC0000, #CC0000);
+background: linear-gradient(top, #CC0000, #CC0000);
+/*style to the text inside the button*/
+font-family:Andika, Arial, sans-serif; /*Andkia is available at http://www.google.com/webfonts/specimen/Andika*/
+color:#fff;
+font-size:1.1em;
+letter-spacing:.1em;
+font-variant:small-caps;
+/*give the corners a small curve*/
+-webkit-border-radius: 15px 15px 15px 15px;
+-moz-border-radius: 15px 15px 15px 15px;
+border-radius: 15px 15px 15px 15px;
+/*add a drop shadow to the button*/
+-webkit-box-shadow: rgba(0, 0, 0, .75) 0 2px 6px;
+-moz-box-shadow: rgba(0, 0, 0, .75) 0 2px 6px;
+box-shadow: rgba(0, 0, 0, .75) 0 2px 6px;
+}
+/***NOW STYLE THE BUTTON'S HOVER AND FOCUS STATES***/
+input#logout:hover, input#logout:focus {
+color:#edebda;
+/*reduce the spread of the shadow to give a pushed effect*/
+-webkit-box-shadow: rgba(0, 0, 0, .25) 0 1px 0px;
+-moz-box-shadow: rgba(0, 0, 0, .25) 0 1px 0px;
+box-shadow: rgba(0, 0, 0, .25) 0 1px 0px;
+}
 
 /*********************************************************************************/
 /* Form                                                                          */
